--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "format.fix": "prettier --write ."
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "axios": "^1.7.7",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -56,10 +56,9 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
-    "@swc/core": "^1.13.3",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.84.2",
-    "@vitejs/plugin-react-swc": "^4.0.0",
+    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -88,7 +87,6 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
     "tsx": "^4.20.3",
-    
     "vaul": "^1.1.2",
     "vite": "^7.1.2",
     "vitest": "^3.2.4"
