--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@
 # https://www.builder.io/c/docs/using-your-api-key
 VITE_PUBLIC_BUILDER_KEY=__BUILDER_PUBLIC_KEY__
 PING_MESSAGE="ping pong"
+VITE_FIREBASE_API_KEY=AIzaSyAGJtULEq4UKnU7fxZi7jts7_tluB4hqbs
+VITE_FIREBASE_AUTH_DOMAIN=student-51e6a.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=student-51e6a
+VITE_FIREBASE_STORAGE_BUCKET=student-51e6a.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=179721012878
+VITE_FIREBASE_APP_ID=1:179721012878:web:8b54eec4a85523e389abdf
