--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "firebase": "^12.5.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
