--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "firebase": "^12.5.0",
+    "jwt-decode": "^4.0.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
